--- a/BulkyWeb/appsettings.json
+++ b/BulkyWeb/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-RB3VNQ5; Database=Bulky; Trusted_Connection=True; TrustServerCertificate=True"
+  }
 }
